--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
                 <div class="wrapper-logo"><img src="./img/SVG/logotipo.svg" alt=""></div>
                 <nav>
                     <ul>
-                        <li><a href="">Home</a></li>
-                        <li><a href="">Nossos Serviços</a></li>
-                        <li><a href="">Portfólios</a></li>
-                        <li><a href="">Faça um Orçamento</a></li>
-                        <li><a href="">Contato</a></li>
+                        <li><a href="#quemsomos">Home</a></li>
+                        <li><a href="#portfolio">Portfólios</a></li>
+                        <li><a href="#servicos">Nossos Serviços</a></li>
+                        <li><a href="#contato">Faça um Orçamento</a></li>
+                        <li><a href="#contato">Contato</a></li>
                     </ul>
                 </nav>
             </div>
@@ -51,7 +51,7 @@
         </div> -->
 
 
-            <div class="quemsomos">
+            <div id="quemsomos" class="quemsomos">
                 <h1>Quem Somos</h1>
                 <p>Somos o resultado de diferentes competências e conhecimentos, motivados pelo desejo de transformar
                     seus sonhos. Nossa inspiração, parte do respeito e carinho, que dedicamos a cada cliente e seus
@@ -62,7 +62,7 @@
                     expectativas de cada cliente, que chega até nós!
                 </p>
             </div>
-            <div class="portfolio">
+            <div id="portfolio" class="portfolio">
                 <h1>PORTFÓLIO</h1>
                 <p>Reunimos em nosso portfolio os principais projetos realizados, para que você possa conhecer um pouco
                     mais do nosso trabalho e os resultados.</p>
@@ -79,48 +79,51 @@
                 </div>
             </div>
 
-            <div class="servicos">
+            <div id="servicos" class="servicos">
                 <h1>Serviços</h1>
-                <li>
-                    <h2>
-                    <ul>Gerenciamento de Obras</ul>
-                    <ul>Pisos e Revestimentos</ul>
-                    <ul>Pintura</ul>
-                    <ul>Reforma em geral</ul>
-                    </h2>
-                </li>
+                <ul>
+
+                    <li>Gerenciamento de Obras</li>
+                    <li>Pisos e Revestimentos</li>
+                    <li>Pintura</li>
+                    <li>Reforma em geral</li>
+
+                </ul>
 
             </div>
 
         </main>
 
-        <!-- Contato -->
-        <section id="contato">
-            <h2 class="text-center section-title">Fale Conosco</h2>
 
-            <div class="col-md-6">
-                <label for="nome" class="form-label">Nome</label>
-                <input type="text" class="form-control" id="nome" required>
-            </div>
-            <div class="col-md-6">
-                <label for="email" class="form-label">E-mail</label>
-                <input type="email" class="form-control" id="email" required>
-            </div>
-            <div class="col-12">
-                <label for="mensagem" class="form-label">Mensagem</label>
-                <textarea class="form-control" id="mensagem" rows="4" required></textarea>
-            </div>
-            <div class="col-12 text-center">
-                <button type="submit" class="btn btn-success">Enviar</button>
-            </div>
-
-        </section>
 
         <!-- Footer -->
-        <footer class="text-center">
-            <div class="container">
-                <p>&copy; 2025 Ari Construtor. Todos os direitos reservados.</p>
-            </div>
+        <footer id="contato" class="text-center">
+            <!-- Contato -->
+            <!-- <section id="contato" class="contato">
+                <h2 class="text-center section-title">Fale Conosco</h2>
+
+                <div class="col-md-6">
+                    <label for="nome" class="form-label">Nome</label>
+                    <input type="text" class="form-control" id="nome" required>
+                </div>
+                <div class="col-md-6">
+                    <label for="email" class="form-label">E-mail</label>
+                    <input type="email" class="form-control" id="email" required>
+                </div>
+                <div class="col-12">
+                    <label for="mensagem" class="form-label">Mensagem</label>
+                    <textarea class="form-control" id="mensagem" rows="4" required></textarea>
+                </div>
+                <div class="col-12 text-center">
+                    <button type="submit" class="btn btn-success">Enviar</button>
+                </div>
+
+            </section> -->
+            <a href="https://api.whatsapp.com/send?phone=5511978012008"><img src="./img/SVG/wtapp.svg"
+                    alt="logo whatsapp"></a>
+            <p>Faça seu orçamento pelo nosso whatsapp</p>
+            <p>&copy; 2025 Ari Construtor. Todos os direitos reservados.</p>
+
         </footer>
     </div>
 
